@@ -4,26 +4,37 @@ import android.net.Uri;
 import android.text.TextUtils;
 
 import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
+import androidx.media3.common.C;
+import androidx.media3.common.Format;
 import androidx.media3.common.MediaItem;
 import androidx.media3.common.MediaMetadata;
 import androidx.media3.common.PlaybackException;
+import androidx.media3.common.PlaybackParameters;
 import androidx.media3.common.Player;
 import androidx.media3.common.Tracks;
 import androidx.media3.common.VideoSize;
+import androidx.media3.ui.danmaku.DanmakuConfig;
 
 import com.fongmi.android.tv.App;
 import com.fongmi.android.tv.Constant;
 import com.fongmi.android.tv.R;
-import com.fongmi.android.tv.Setting;
 import com.fongmi.android.tv.bean.Danmaku;
 import com.fongmi.android.tv.bean.Result;
 import com.fongmi.android.tv.bean.Sub;
 import com.fongmi.android.tv.bean.Track;
 import com.fongmi.android.tv.impl.ParseCallback;
-import com.fongmi.android.tv.player.danmaku.DanPlayer;
-import com.fongmi.android.tv.player.engine.ExoPlayerEngine;
-import com.fongmi.android.tv.player.engine.PlaySpec;
+import com.fongmi.android.tv.player.effect.PlayerEffectManager;
+import com.fongmi.android.tv.player.effect.audio.AudioEffectBands;
 import com.fongmi.android.tv.player.engine.PlayerEngine;
+import com.fongmi.android.tv.player.engine.PlayerEngineFactory;
+import com.fongmi.android.tv.player.media.PlaySpec;
+import com.fongmi.android.tv.player.parse.ParseJob;
+import com.fongmi.android.tv.player.track.TrackUtil;
+import com.fongmi.android.tv.setting.DanmakuSetting;
+import com.fongmi.android.tv.setting.PlayerSetting;
+import com.fongmi.android.tv.setting.PreloadSetting;
+import com.fongmi.android.tv.setting.SpeedSetting;
 import com.fongmi.android.tv.utils.Notify;
 import com.fongmi.android.tv.utils.ResUtil;
 import com.fongmi.android.tv.utils.Util;
@@ -31,55 +42,63 @@ import com.google.common.net.HttpHeaders;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
-
-import master.flame.danmaku.ui.widget.DanmakuView;
 
 public class PlayerManager implements ParseCallback {
 
+    private final PlayerEffectManager effects;
     private final Runnable runnable;
     private final Callback callback;
+    private PendingPreload pendingPreload;
     private PlayerEngine engine;
-    private DanPlayer danPlayer;
     private VideoSize videoSize;
     private ParseJob parseJob;
     private PlaySpec spec;
     private Player player;
 
+    private DanmakuConfig danmakuConfig;
+    private long pendingStartPositionMs;
+    private boolean danmakuEnabled;
     private boolean initTrack;
     private int retry;
+    private int decode;
 
     public PlayerManager(Callback callback) {
-        this.runnable = () -> callback.onError(ResUtil.getString(R.string.error_play_timeout));
-        this.engine = new ExoPlayerEngine(PlayerEngine.HARD, listener);
-        this.player = engine.getPlayer();
         this.callback = callback;
+        this.decode = PlayerEngine.HARD;
+        this.runnable = this::onPlayTimeout;
+        this.pendingStartPositionMs = C.TIME_UNSET;
+        this.engine = PlayerEngineFactory.create(decode, listener);
+        this.effects = new PlayerEffectManager(() -> engine);
+        this.danmakuConfig = DanmakuSetting.getConfig();
+        this.danmakuEnabled = DanmakuSetting.isShow();
+        this.player = engine.getPlayer();
     }
 
     public void release() {
-        stopParse();
         App.removeCallbacks(runnable);
-        if (danPlayer != null) {
-            danPlayer.release();
-            danPlayer = null;
-        }
-        if (engine != null) {
-            player.removeListener(listener);
-            engine.release();
-            engine = null;
-            player = null;
-        }
+        if (player != null) player.removeListener(listener);
+        if (engine != null) engine.release();
+        engine = null;
+        player = null;
     }
 
     public Player getPlayer() {
         return player;
     }
 
-    public Tracks getCurrentTracks() {
-        return engine.getCurrentTracks();
+    private void setPlayer(Player player) {
+        this.player = player;
+        callback.onPlayerRebuild(player);
     }
 
+    public Tracks getCurrentTracks() {
+        return player.getCurrentTracks();
+    }
+
+    public int getAudioChannelCount() {
+        return engine == null ? Format.NO_VALUE : engine.getAudioChannelCount();
+    }
     public MediaItem getCurrentMediaItem() {
         return player.getCurrentMediaItem();
     }
@@ -92,6 +111,10 @@ public class PlayerManager implements ParseCallback {
         return player.isPlaying();
     }
 
+    public boolean isReleased() {
+        return player == null;
+    }
+
     public String getUrl() {
         return spec != null ? spec.getUrl() : null;
     }
@@ -101,7 +124,31 @@ public class PlayerManager implements ParseCallback {
     }
 
     public List<Danmaku> getDanmakus() {
-        return spec != null ? spec.getDanmakus() : null;
+        return spec != null ? spec.getDanmakus() : List.of();
+    }
+
+    private void notifyDanmakuSourceChanged() {
+        callback.onDanmakuSourceChanged(getSelectedDanmakuUri());
+    }
+
+    public MediaMetadata getMetadata() {
+        return spec != null ? spec.getMetadata() : null;
+    }
+
+    public String getMediaTitle() {
+        MediaMetadata metadata = getMetadata();
+        if (metadata == null) return "";
+        CharSequence title = !TextUtils.isEmpty(metadata.displayTitle) ? metadata.displayTitle : metadata.title;
+        if (TextUtils.isEmpty(title)) title = metadata.artist;
+        return TextUtils.isEmpty(title) ? "" : title.toString();
+    }
+
+    public void setMetadata(@NonNull MediaMetadata metadata) {
+        if (spec == null || metadata.equals(spec.getMetadata())) return;
+        spec.setMetadata(metadata);
+        if (TextUtils.isEmpty(spec.getUrl())) return;
+        MediaItem current = player.getCurrentMediaItem();
+        if (current != null) player.replaceMediaItem(player.getCurrentMediaItemIndex(), current.buildUpon().setMediaMetadata(metadata).build());
     }
 
     public Map<String, String> getHeaders() {
@@ -116,6 +163,14 @@ public class PlayerManager implements ParseCallback {
         return spec == null || TextUtils.isEmpty(spec.getUrl());
     }
 
+    public boolean hasPlaySpec() {
+        return spec != null;
+    }
+
+    public boolean canPreloadNext() {
+        return PreloadSetting.isEnabled() && PreloadSetting.isNextEpisodeEnabled() && engine != null && engine.getType() == PlayerEngine.Type.EXO;
+    }
+
     public boolean isPortrait() {
         return getVideoHeight() > getVideoWidth();
     }
@@ -125,19 +180,26 @@ public class PlayerManager implements ParseCallback {
     }
 
     public boolean isLive() {
-        return engine.isLive();
+        return player.getCurrentMediaItem() != null && player.isCurrentMediaItemLive();
     }
 
     public boolean isVod() {
-        return engine.isVod();
+        return player.getCurrentMediaItem() != null && !player.isCurrentMediaItemLive();
     }
 
     public boolean haveTrack(int type) {
-        return engine.haveTrack(type);
+        return TrackUtil.count(getCurrentTracks(), type) > 0;
     }
 
+    public boolean haveEdition() {
+        return false;
+    }
+
+    public boolean haveChapter() {
+        return false;
+    }
     public boolean haveDanmaku() {
-        return getDanmakus() != null && getDanmakus().stream().anyMatch(Danmaku::isSelected);
+        return spec != null && spec.getSelectedDanmaku() != null;
     }
 
     public boolean canSetOpening(long position, long duration) {
@@ -164,17 +226,48 @@ public class PlayerManager implements ParseCallback {
         return (getVideoWidth() == 0 && getVideoHeight() == 0) ? "" : getVideoWidth() + " x " + getVideoHeight();
     }
 
-    public String getSpeedText() {
-        return String.format(Locale.getDefault(), "%.2f", getSpeed());
+    public String getDecodeText() {
+        return ResUtil.getStringArray(R.array.select_decode)[decode];
     }
 
-    public String getDecodeText() {
-        return engine.getDecodeText();
+    public boolean canSetAudioSetting() {
+        return effects.canSetAudioSetting();
+    }
+
+    public AudioEffectBands getAudioSettingBands() {
+        return effects.getAudioSettingBands();
+    }
+
+    public int getAudioSettingError() {
+        return effects.getAudioSettingError();
+    }
+
+    public boolean canSetVideoSetting() {
+        return effects.canSetVideoSetting();
+    }
+
+    public int getVideoSettingError() {
+        return effects.getVideoSettingError();
+    }
+
+    public boolean supportsVideoSharpness() {
+        return effects.supportsVideoSharpness();
+    }
+
+    public int getEngine() {
+        return isMpvEngine() ? PlayerSetting.ENGINE_MPV : PlayerSetting.ENGINE_EXO;
+    }
+
+    public void setEngine(int targetEngine) {
+        PlayerSetting.putEngine(targetEngine);
+        if (isEmpty() || PlayerEngineFactory.matches(engine, spec)) return;
+        PlaybackSnapshot snapshot = PlaybackSnapshot.capture(player);
+        startCurrent(snapshot.positionMs());
+        snapshot.restore(player);
     }
 
     public String getPositionTime(long delta) {
-        long time = Math.max(0, Math.min(getPosition() + delta, Math.max(0, getDuration())));
-        return Util.timeMs(time);
+        return Util.timeMs(Math.clamp(getPosition() + delta, 0, Math.max(0, getDuration())));
     }
 
     public long getDuration() {
@@ -187,12 +280,13 @@ public class PlayerManager implements ParseCallback {
 
     public void setSub(Sub sub) {
         if (spec != null) spec.setSub(sub);
-        setMediaItem();
+        if (engine.addSubtitle(sub)) play();
+        else startCurrent();
     }
 
     public void setFormat(String format) {
         if (spec != null) spec.setFormat(format);
-        setMediaItem();
+        startCurrent();
     }
 
     public static MediaMetadata buildMetadata(String title, String artist, String artUri) {
@@ -200,47 +294,77 @@ public class PlayerManager implements ParseCallback {
         return new MediaMetadata.Builder().setTitle(title).setArtist(artist).setArtworkUri(artwork).build();
     }
 
-    public void setMetadata(MediaMetadata data) {
-        if (spec != null) spec.setMetadata(data);
-        engine.setMetadata(data);
+    public void setDanmakuConfig(DanmakuConfig config) {
+        danmakuConfig = config;
+        callback.onDanmakuConfigChanged(danmakuConfig);
     }
 
-    public void setDanmakuView(DanmakuView view) {
-        danPlayer = new DanPlayer(view);
-        danPlayer.attachPlayer(player);
+    public void setDanmakuEnabled(boolean enabled) {
+        if (danmakuEnabled == enabled) return;
+        danmakuEnabled = enabled;
+        callback.onDanmakuEnabledChanged(danmakuEnabled);
     }
 
-    public void setDanmakuSize(float size) {
-        danPlayer.setTextSize(size);
+    public void setSubtitleSettingStyle() {
+        if (engine != null) engine.setSubtitleStyle();
     }
 
-    public String setSpeed(float speed) {
-        if (!player.isCommandAvailable(Player.COMMAND_SET_SPEED_AND_PITCH)) return getSpeedText();
-        player.setPlaybackParameters(player.getPlaybackParameters().withSpeed(speed));
-        return getSpeedText();
+    public void sendDanmaku(String text) {
+        callback.onDanmakuSent(text);
     }
 
-    public String addSpeed() {
-        float speed = getSpeed();
-        float addon = speed >= 2 ? 1f : 0.25f;
-        speed = speed >= 5 ? 0.25f : Math.min(speed + addon, 5.0f);
-        return setSpeed(speed);
+    public float setSpeed(float speed) {
+        if (!player.isCommandAvailable(Player.COMMAND_SET_SPEED_AND_PITCH)) return getSpeed();
+        player.setPlaybackParameters(player.getPlaybackParameters().withSpeed(SpeedSetting.clamp(speed)));
+        return getSpeed();
     }
 
-    public String addSpeed(float value) {
-        return setSpeed(Math.min(getSpeed() + value, 5));
+    public float toggleSpeed() {
+        return setSpeed(getSpeed() == 1 ? SpeedSetting.getLongPress() : 1);
     }
 
-    public String subSpeed(float value) {
-        return setSpeed(Math.max(getSpeed() - value, 0.25f));
+    public boolean supportsSkipSilence() {
+        return effects.supportsSkipSilence();
     }
 
-    public String toggleSpeed() {
-        return setSpeed(getSpeed() == 1 ? Setting.getSpeed() : 1);
+    public boolean isSkipSilence() {
+        return effects.isSkipSilence();
+    }
+
+    public void setSkipSilenceEnabled(boolean enabled) {
+        effects.setSkipSilenceEnabled(enabled);
     }
 
     public void setTrack(List<Track> tracks) {
-        if (!tracks.isEmpty()) engine.setTrack(tracks);
+        if (!tracks.isEmpty()) TrackUtil.setTrackSelection(player, tracks);
+    }
+
+    public void setVideoSetting(int preset) {
+        effects.setVideoSetting(preset);
+    }
+
+    public void refreshVideoSetting() {
+        effects.refreshVideoSetting();
+    }
+
+    public void previewVideoSetting(boolean original) {
+        effects.previewVideoSetting(original);
+    }
+
+    public void setAudioSetting(int preset) {
+        effects.setAudioSetting(preset);
+    }
+
+    public void refreshAudioSetting() {
+        effects.refreshAudioSetting();
+    }
+
+    public void previewAudioSetting(boolean original) {
+        effects.previewAudioSetting(original);
+    }
+
+    private boolean isMpvEngine() {
+        return engine != null && engine.getType() == PlayerEngine.Type.MPV;
     }
 
     public void play() {
@@ -252,17 +376,44 @@ public class PlayerManager implements ParseCallback {
     }
 
     public void stop() {
-        if (danPlayer != null) danPlayer.stop();
-        player.stop();
+        engine.stop();
         stopParse();
+    }
+
+    public void clearMediaItems() {
+        player.clearMediaItems();
+    }
+
+    public boolean isRepeatOne() {
+        return player.getRepeatMode() == Player.REPEAT_MODE_ONE;
     }
 
     public void setRepeatOne(boolean repeat) {
         player.setRepeatMode(repeat ? Player.REPEAT_MODE_ONE : Player.REPEAT_MODE_OFF);
     }
 
+    public void replay(long positionMs) {
+        if (positionMs == C.TIME_UNSET) player.seekToDefaultPosition();
+        else player.seekTo(positionMs);
+        player.play();
+    }
+
     public void seekTo(long time) {
         player.seekTo(time);
+    }
+
+    public long getTextOffsetMs() {
+        return 0;
+    }
+
+    public void setTextOffsetMs(long offsetMs) {
+    }
+
+    public long getAudioOffsetMs() {
+        return 0;
+    }
+
+    public void setAudioOffsetMs(long offsetMs) {
     }
 
     public void reset() {
@@ -274,29 +425,85 @@ public class PlayerManager implements ParseCallback {
         spec = null;
     }
 
+    public boolean preload(PlaySpec spec, long startPositionMs) {
+        if (!canPreloadNext() || spec == null || !PlayerEngineFactory.matches(engine, spec)) return false;
+        pendingPreload = new PendingPreload(spec.checkUa(), Math.max(0, startPositionMs));
+        startPreloadIfReady();
+        return true;
+    }
+
+    public void clearPreload() {
+        pendingPreload = null;
+        if (engine != null) engine.clearPreload();
+    }
+
     public void resetTrack() {
-        engine.resetTrack();
+        TrackUtil.reset(player);
     }
 
     public void toggleDecode() {
-        engine.setDecode(engine.isHard() ? PlayerEngine.SOFT : PlayerEngine.HARD);
-        rebuildPlayer();
-        setMediaItem();
+        setDecode(isHard() ? PlayerEngine.SOFT : PlayerEngine.HARD);
     }
 
-    private void rebuildPlayer() {
-        player = engine.rebuild(listener);
-        if (danPlayer != null) danPlayer.attachPlayer(player);
-        callback.onPlayerRebuild(player);
+    private void handleDecodeError(PlaybackException e) {
+        if (++retry > 1) callback.onError(engine.getErrorMessage(e));
+        else retryDecode(isHard() ? PlayerEngine.SOFT : PlayerEngine.HARD);
+    }
+
+    private void retryDecode(int decode) {
+        setDecode(decode);
+        PlaybackSnapshot snapshot = PlaybackSnapshot.capture(player);
+        startCurrent(snapshot.positionMs());
+        snapshot.restore(player);
+    }
+
+    private void setDecode(int decode) {
+        this.decode = decode;
+        engine.setDecode(decode);
+        callback.onDecodeChanged();
+    }
+
+    private boolean isHard() {
+        return decode == PlayerEngine.HARD;
+    }
+
+    private void onPlayTimeout() {
+        callback.onError(ResUtil.getString(R.string.error_play_timeout));
+        stop();
+    }
+
+    private void ensureEngine(PlaySpec spec) {
+        if (PlayerEngineFactory.matches(engine, spec)) return;
+        PlayerEngine old = engine;
+        player.removeListener(listener);
+        engine = PlayerEngineFactory.create(decode, spec, listener);
+        setPlayer(engine.getPlayer());
+        old.release();
+    }
+
+    public void browse(PlaySpec spec, long startPositionMs) {
+        reset();
+        clear();
+        stopParse();
+        start(spec, Constant.TIMEOUT_PLAY, startPositionMs);
     }
 
     public void start(PlaySpec spec, long timeout) {
+        start(spec, timeout, C.TIME_UNSET);
+    }
+
+    public void start(PlaySpec spec, long timeout, long startPositionMs) {
         this.spec = spec;
-        setMediaItem(timeout);
+        setMediaItem(timeout, startPositionMs);
     }
 
     public void parse(String key, Result result, boolean useParse, MediaMetadata metadata) {
+        parse(key, result, useParse, metadata, C.TIME_UNSET);
+    }
+
+    public void parse(String key, Result result, boolean useParse, MediaMetadata metadata, long startPositionMs) {
         stopParse();
+        pendingStartPositionMs = startPositionMs;
         spec = PlaySpec.fromParse(result, key, metadata);
         parseJob = ParseJob.create(this).start(result, useParse);
     }
@@ -304,35 +511,55 @@ public class PlayerManager implements ParseCallback {
     private void stopParse() {
         if (parseJob != null) parseJob.stop();
         parseJob = null;
+        pendingStartPositionMs = C.TIME_UNSET;
     }
 
-    public void setMediaItem() {
-        setMediaItem(Constant.TIMEOUT_PLAY);
-    }
-
-    private void setMediaItem(long timeout) {
+    private void setMediaItem(long timeout, long startPositionMs) {
         if (spec == null || spec.getUrl() == null) return;
-        setDanmakus(spec.getDanmakus());
-        engine.start(spec.checkUa());
+        ensureEngine(spec.checkUa());
+        pendingPreload = null;
+        initTrack = false;
+        engine.start(spec, startPositionMs);
+        notifyDanmakuSourceChanged();
         App.post(runnable, timeout);
         callback.onPrepare();
-        initTrack = false;
     }
 
-    public void startBrowse(PlaySpec spec) {
-        reset();
-        clear();
-        stopParse();
-        start(spec, Constant.TIMEOUT_PLAY);
+    private void startCurrent() {
+        startCurrent(getPosition());
     }
 
-    private void setDanmakus(List<Danmaku> items) {
-        if (danPlayer != null) setDanmaku(items == null || items.isEmpty() ? Danmaku.empty() : items.get(0));
+    private void startCurrent(long startPositionMs) {
+        setMediaItem(Constant.TIMEOUT_PLAY, startPositionMs);
+    }
+
+    private void startPreloadIfReady() {
+        PendingPreload preload = pendingPreload;
+        if (preload == null || player.getPlaybackState() != Player.STATE_READY) return;
+        pendingPreload = null;
+        engine.preload(preload.spec(), preload.startPositionMs());
+    }
+
+    @Nullable
+    public Uri getSelectedDanmakuUri() {
+        Danmaku item = spec != null ? spec.getSelectedDanmaku() : null;
+        return item == null ? null : item.getUri();
     }
 
     public void setDanmaku(Danmaku item) {
-        if (spec != null) spec.setDanmaku(item);
-        if (danPlayer != null) danPlayer.setDanmaku(item);
+        if (spec == null) return;
+        spec.selectDanmaku(item);
+        notifyDanmakuSourceChanged();
+    }
+
+    public void toggleDanmaku(Danmaku item) {
+        if (spec == null) return;
+        spec.toggleDanmaku(item);
+        notifyDanmakuSourceChanged();
+    }
+
+    public void addDanmaku(Danmaku item) {
+        if (spec != null) spec.addDanmaku(item);
     }
 
     @Override
@@ -341,11 +568,13 @@ public class PlayerManager implements ParseCallback {
         if (headers != null) headers.remove(HttpHeaders.RANGE);
         if (spec != null) spec.setHeaders(headers);
         if (spec != null) spec.setUrl(url);
-        setMediaItem();
+        startCurrent(pendingStartPositionMs);
+        pendingStartPositionMs = C.TIME_UNSET;
     }
 
     @Override
     public void onParseError() {
+        pendingStartPositionMs = C.TIME_UNSET;
         callback.onError(ResUtil.getString(R.string.error_play_parse));
     }
 
@@ -355,18 +584,49 @@ public class PlayerManager implements ParseCallback {
 
         void onTracksChanged();
 
-        void onTitlesChanged();
+        void onDecodeChanged();
+
+        void onMediaOptionsChanged();
 
         void onError(String msg);
 
         void onPlayerRebuild(Player newPlayer);
+
+        void onDanmakuSourceChanged(Uri uri);
+
+        void onDanmakuConfigChanged(DanmakuConfig config);
+
+        void onDanmakuEnabledChanged(boolean enabled);
+
+        void onDanmakuSent(String text);
+    }
+
+    private record PendingPreload(PlaySpec spec, long startPositionMs) {
+    }
+
+    private record PlaybackSnapshot(long positionMs, boolean playWhenReady, PlaybackParameters playbackParameters, int repeatMode, float volume, long audioOffsetMs, long textOffsetMs) {
+
+        private static PlaybackSnapshot capture(Player player) {
+            float volume = player.isCommandAvailable(Player.COMMAND_GET_VOLUME) ? player.getVolume() : Float.NaN;
+            long audioOffsetMs = C.TIME_UNSET;
+            long textOffsetMs = C.TIME_UNSET;
+            return new PlaybackSnapshot(player.getCurrentPosition(), player.getPlayWhenReady(), player.getPlaybackParameters(), player.getRepeatMode(), volume, audioOffsetMs, textOffsetMs);
+        }
+
+        private void restore(Player player) {
+            if (player.isCommandAvailable(Player.COMMAND_SET_SPEED_AND_PITCH)) player.setPlaybackParameters(playbackParameters);
+            if (player.isCommandAvailable(Player.COMMAND_SET_REPEAT_MODE)) player.setRepeatMode(repeatMode);
+            if (!Float.isNaN(volume) && player.isCommandAvailable(Player.COMMAND_SET_VOLUME)) player.setVolume(volume);
+            if (player.isCommandAvailable(Player.COMMAND_PLAY_PAUSE)) player.setPlayWhenReady(playWhenReady);
+        }
     }
 
     private final Player.Listener listener = new Player.Listener() {
 
         @Override
         public void onPlaybackStateChanged(int state) {
-            if (state != Player.STATE_IDLE) App.removeCallbacks(runnable);
+            if (state == Player.STATE_READY || state == Player.STATE_ENDED) App.removeCallbacks(runnable);
+            if (state == Player.STATE_READY) startPreloadIfReady();
         }
 
         @Override
@@ -383,20 +643,15 @@ public class PlayerManager implements ParseCallback {
         }
 
         @Override
+
         public void onPlayerError(@NonNull PlaybackException e) {
+            if (spec == null) return;
             PlayerEngine.ErrorAction action = engine.handleError(e);
-            if (action == PlayerEngine.ErrorAction.RECOVERED) return;
-            if (++retry > 2) {
-                callback.onError(engine.getErrorMessage(e));
-                return;
-            }
+            if (action != PlayerEngine.ErrorAction.RECOVERED) App.removeCallbacks(runnable);
             switch (action) {
-                case DECODE:
-                    toggleDecode();
-                    break;
-                case FATAL:
-                    callback.onError(engine.getErrorMessage(e));
-                    break;
+                case DECODE -> handleDecodeError(e);
+                case RECOVERED -> notifyDanmakuSourceChanged();
+                case FATAL -> callback.onError(engine.getErrorMessage(e));
             }
         }
     };
